manifests/firefly-iii/firefly-iii/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: firefly-iii
    tier: frontend
