manifests/firefly-iii/firefly-iii/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  labels:
  name: firefly-iii-ingress
spec:
  rules:
  - host: firefly-iii.your-domain.org
    http:
      paths:
      - backend:
          service:
            name: firefly-iii
            port:
              name: http
        path: /
        pathType: Prefix
